// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`shareContextMenuExtensions should sort ascending on sort order first and then ascending on name 1`] = `
<I18nProvider>
  <EuiContextMenu
    data-test-subj="shareContextMenu"
    initialPanelId={4}
    panels={
      Array [
        Object {
          "content": <UrlPanelContent
            allowShortUrl={false}
            basePath=""
            objectType="dashboard"
            post={[Function]}
          />,
          "id": 1,
          "title": "Permalink",
        },
        Object {
          "content": <div>
            panel content
          </div>,
          "id": 2,
          "title": "AAA panel",
        },
        Object {
          "content": <div>
            panel content
          </div>,
          "id": 3,
          "title": "ZZZ panel",
        },
        Object {
          "id": 4,
          "items": Array [
            Object {
              "data-test-subj": "sharePanel-Permalinks",
              "icon": "link",
              "name": "Permalinks",
              "panel": 1,
            },
            Object {
              "data-test-subj": "sharePanel-ZZZpanel",
              "name": "ZZZ panel",
              "panel": 3,
            },
            Object {
              "data-test-subj": "sharePanel-AAApanel",
              "name": "AAA panel",
              "panel": 2,
            },
          ],
          "title": "Share this dashboard",
        },
      ]
    }
    size="m"
  />
</I18nProvider>
`;

exports[`should only render permalink panel when there are no other panels 1`] = `
<I18nProvider>
  <EuiContextMenu
    data-test-subj="shareContextMenu"
    initialPanelId={1}
    panels={
      Array [
        Object {
          "content": <UrlPanelContent
            allowShortUrl={false}
            basePath=""
            objectType="dashboard"
            post={[Function]}
          />,
          "id": 1,
          "title": "Permalink",
        },
      ]
    }
    size="m"
  />
</I18nProvider>
`;

exports[`should render context menu panel when there are more than one panel 1`] = `
<I18nProvider>
  <EuiContextMenu
    data-test-subj="shareContextMenu"
    initialPanelId={3}
    panels={
      Array [
        Object {
          "content": <UrlPanelContent
            allowShortUrl={false}
            basePath=""
            objectType="dashboard"
            post={[Function]}
          />,
          "id": 1,
          "title": "Permalink",
        },
        Object {
          "content": <UrlPanelContent
            allowShortUrl={false}
            basePath=""
            isEmbedded={true}
            objectType="dashboard"
            post={[Function]}
          />,
          "id": 2,
          "title": "Embed Code",
        },
        Object {
          "id": 3,
          "items": Array [
            Object {
              "data-test-subj": "sharePanel-Embedcode",
              "icon": "console",
              "name": "Embed code",
              "panel": 2,
            },
            Object {
              "data-test-subj": "sharePanel-Permalinks",
              "icon": "link",
              "name": "Permalinks",
              "panel": 1,
            },
          ],
          "title": "Share this dashboard",
        },
      ]
    }
    size="m"
  />
</I18nProvider>
`;
